syntax = "proto3";

package strictmode;

service GripMock {
  rpc SayTitleHello (SayTitleHelloRequest) returns (SayTitleHelloReply);
  rpc sayLowerHello (sayLowerHelloRequest) returns (sayLowerHelloReply);
}

message sayLowerHelloRequest {
  string name = 1;
}

message sayLowerHelloReply {
  string message = 1;
}

message SayTitleHelloRequest {
  string name = 1;
}

message SayTitleHelloReply {
  string message = 1;
}
